Fixes spacing between badges.

--- a/myuw_mobile/static/css/mobile.less
+++ b/myuw_mobile/static/css/mobile.less
@@ -109,9 +109,9 @@ body {
         
         .card-critical-alert { background: #f5d300; padding: 8px; text-align: center; margin-bottom: 1em; }
         
-        .card-badge-container { margin-bottom: 1em;
+        .card-badge-container { margin-bottom: 10px;
                 
-            .card-badge {  background: #ccc; padding: 8px; margin-bottom: 10px; overflow: hidden; text-align: center;
+            .card-badge {  background: #ccc; padding: 8px; overflow: hidden; text-align: center;
                 .card-badge-label { text-align: center; display: block; font-weight: normal;  }
                 .card-badge-value { text-align: center; display: block; font-size: 16px; font-weight: bold; }
                 .card-badge-note { text-align: center; display: block; font-weight: normal; font-style: italic; color: #888; margin-top: 10px; }
